logs/validate.20260331-223558.log
error[E0600]: cannot apply unary operator `!` to type `fn(_, _) -> bool {vstd::prelude::equal::<_>}`
   --> src/Chap41/AVLTreeSetMtPer.rs:377:32
    |
377 |                 proof { assume(!equal); }
    |                                ^^^^^^ cannot apply unary operator `!`

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0600`.
Elapsed: 4s
Sampled Memory Usage: peak rust_verify RSS: 487MB, peak z3 RSS: 0MB, min free: 23890MB
Sampled CPU Usage: rust_verify: 4s, z3 children: 0s
